--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "https://kietpt2003.github.io/anniLieu",
+  "homepage": "http://kietpt2003.github.io/anniLieu",
   "name": "anni-lieu",
   "version": "0.1.0",
   "private": true,
